--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,8 +1,8 @@
-.todo-container {
+.todoContainer {
   width: 100%;
   padding: 15px;
 
-  .todo-list {
+  .todoList {
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
