--- a/src/components/TodoList/Todo/Todo.module.scss
+++ b/src/components/TodoList/Todo/Todo.module.scss
@@ -1,4 +1,4 @@
-.todo-list-item__wrapper {
+.todoListItem__wrapper {
   width: 100%;
   min-height: 50px;
   font-size: 14px;
@@ -21,7 +21,7 @@
     margin: 0;
   }
 
-  .todo-list-item__buttons {
+  .todoListItem__buttons {
     width: 100px;
     height: 50px;
     display: flex;
@@ -30,7 +30,7 @@
     top: 0;
     right: 0;
 
-    button {
+    .button {
       width: 50px;
       height: 50px;
       background-color: transparent;
@@ -41,28 +41,27 @@
       box-shadow: none;
       outline: none;
       cursor: pointer;
+    }
+    .btnTrash {
+      background-image: url('../../../assets/images/trash.png');
 
-      &.btn-trash {
-        background-image: url('../../../assets/images/trash.png');
+      &:last-of-type:before {
+        content: '';
+        width: 1px;
+        height: 30px;
+        background: #edf0f1;
 
-        &:last-of-type:before {
-          content: '';
-          width: 1px;
-          height: 30px;
-          background: #edf0f1;
-
-          position: absolute;
-          top: 10px;
-          left: 0;
-        }
+        position: absolute;
+        top: 10px;
+        left: 0;
       }
+    }
 
-      &.btn-check {
-        background-image: url('../../../assets/images/check.png');
-      }
-      &.btn-uncheck {
-        background-image: url('../../../assets/images/uncheck.png');
-      }
+    .btnCheck {
+      background-image: url('../../../assets/images/check.png');
+    }
+    .btnUncheck {
+      background-image: url('../../../assets/images/uncheck.png');
     }
   }
 }
